[gd_scene load_steps=5 format=3 uid="uid://b7hn7pqk7rh8t"]

[ext_resource type="Script" path="res://Scripts/BattleUIManager.gd" id="1_e850k"]
[ext_resource type="PackedScene" uid="uid://dpo2batpi8tuw" path="res://Scenes/Prefabs/HealthBar.tscn" id="2_aixrd"]
[ext_resource type="PackedScene" uid="uid://cunhkcjcrb3ne" path="res://Scenes/Testing/NoteRails.tscn" id="3_6x0ut"]
[ext_resource type="PackedScene" uid="uid://o4b08xh3bk42" path="res://Scenes/Testing/NoteKeyPad.tscn" id="4_j648b"]

[node name="Container" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e850k")

[node name="RagnagildaHPBar" parent="." instance=ExtResource("2_aixrd")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.279
anchor_top = 0.931
anchor_right = 0.721
anchor_bottom = 1.0
offset_left = 314.88
offset_top = 23.68
offset_right = -10.88
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
pivot_offset = Vector2(280, 25)
value = 100.0

[node name="BossHPBar" parent="." instance=ExtResource("2_aixrd")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.279
anchor_right = 0.721
anchor_bottom = 0.07
offset_left = 314.88
offset_top = 49.0
offset_right = -10.88
offset_bottom = 8.6
grow_horizontal = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(280, 25)
value = 100.0
fill_mode = 1
onHitDisplacement = Vector2(-2, 5)

[node name="NoteRails" parent="." instance=ExtResource("3_6x0ut")]
z_index = 10
position = Vector2(227.68, 630)

[node name="NoteHitter2" parent="NoteRails" index="0"]
position = Vector2(404.32, 0)

[node name="_Timer_66227" type="Timer" parent="NoteRails/NoteHitter2" index="5"]
wait_time = 0.2
one_shot = true

[node name="Background" parent="NoteRails" index="1"]
offset_left = -2.0
offset_right = 812.0

[node name="ActionPanel" parent="NoteRails/Background" index="0"]
offset_left = 333.0
offset_right = 483.0

[node name="ActionText" parent="NoteRails/Background/ActionPanel" index="0"]
offset_left = 7.0
offset_right = 144.0

[node name="BPM" parent="." instance=ExtResource("4_j648b")]
position = Vector2(1196.83, 643)

[editable path="NoteRails"]
